--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para Mi Denise</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="Corazon.ico">
 </head>
 
 <body>
