--- a/flores.html
+++ b/flores.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="flores.css">
+    <link rel="icon" href="Corazon.ico">
     <title>Flores para vos :3 </title>
 </head>
 
